test/test_units/test_kclvm/test_types/invalid_test_data/module/module_0.k
import pkg

a = pkg.b
